--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,7 @@
         "symfony/console": "^3.2",
         "doctrine/orm": "^2.5",
         "symfony/dependency-injection": "^3.2",
-        "symfony/config": "^3.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "phpunit/dbunit": "^3.0"
+        "symfony/config": "^3.2",
+        "symfony/yaml": "^3.2"
     }
 }
