--- a/config/services.yml
+++ b/config/services.yml
@@ -14,6 +14,9 @@ services:
     command.now:
         class: Payroll\Command\NowCommand
 
+    command.display:
+        class: Payroll\Command\DisplayCommand
+
     manager.sheet_manager:
         class: Payroll\Manager\SheetManager
         arguments: ['@doctrine.orm.entity_manager']
