--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
         "symfony/dependency-injection": "^3.2",
         "symfony/config": "^3.2",
         "symfony/yaml": "^3.2"
+    },
+    "scripts": {
+        "post-package-install": [
+            "Payroll\\Composer\\PostPackageInstall::createSchema"
+        ]
     }
 }
