--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "krocos/payroll",
     "description": "Commandline time tracking tool",
     "type": "library",
-    "license": "GPLv3",
+    "license": "GPL-3.0-only",
     "authors": [
         {
             "name": "Vladimir Balin",
